--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,26 +1,19 @@
 Brantly Callaway:
-  name        : "Brantly Callaway"
-  bio         : "Assistant Professor, University of Georgia"
-  avatar      : "/assets/images/IMG_0029_cropped.jpg"
+  name        : "Kihwan Yu"
+  bio         : "Ph.D. student"
+  bio         : "Department of Agricultural Economics"
+  bio         : "Kansas State University"
+  avatar      : "/assets/images/temp.jpg"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:brantly.callaway@uga.edu"
+      url: "mailto:kihwanyu@ksu.edu"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://brantlycallaway.com"
+      url: "https://kihwan-yu.github.io/"
     - label: "Github"
       icon: "fa fa-github"
-      url: "https://github.com/bcallaway11"
+      url: "https://github.com/kihwan-yu"
     - label: "Google Scholar"
       icon: "fas fa-graduation-cap"
-      url: "https://scholar.google.com/citations?user=VAFPcSgAAAAJ"
-    - label: "UGA Economics"
-      icon: "fas fa-university"
-      url: "https://www.terry.uga.edu/economics/index.php"
-    - label: Georgia Econometrics Workshop
-      icon: "fa fa-certificate"
-      url: "https://sites.google.com/view/georgia-econometrics-workshop/"
-    - label: UGA ERG
-      icon: "fa fa-bookmark"
-      url: "https://sites.google.com/view/uga-erg/"
+      url: "https://scholar.google.com/citations?user=blblblblb"
