--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,11 +5,9 @@ main:
     url: /cv/
   - title: "Research"
     url: /research/
-  - title: "Code"
+  - title: "Code Sharing"
     url: /code/
+  - title: "Replications"
+    url: /Replications/
   - title: "Posts"
     url: /posts/
-  - title: "Teaching"
-    url: /teaching/
-  - title: "Students"
-    url: /students/
