--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /research/
   - title: "Code Sharing"
     url: /code/
-  - title: "Replications"
-    url: /Replications/
+  - title: "Replication"
+    url: /Replication/
   - title: "Posts"
     url: /posts/
