--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,8 +1,6 @@
-Brantly Callaway:
+Kihwan Yu:
   name        : "Kihwan Yu"
-  bio         : "Ph.D. student"
-  bio         : "Department of Agricultural Economics"
-  bio         : "Kansas State University"
+  bio         : "Ph.D. student, Kansas State University"
   avatar      : "/assets/images/temp.jpg"
   links:
     - label: "Email"
